Added the first detailed recipe page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title> Recipe Website </title>
     </head>
     <body>
-        <h1> Odin Recipes</h1>
-        <a href="./recipes/lasagna.html"> Lasagna </a>
+        <h1> Famous Nepali Food Recipes </h1>
+        <a href="./recipes/momo.html"> Mo:Mo </a>
         
     </body>
 </html>
