Completed the chicken-curry recipe page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1> Famous Nepali Food Recipes </h1>
-        <a href="./recipes/momo.html"> Mo:Mo </a>
-        
+        <ul>
+            <li><a href="./recipes/momo.html"> Mo:Mo </a></li>
+            <li><a href="./recipes/chicken-curry.html"> Chicken Curry </a></li> 
+        </ul>
     </body>
 </html>
