--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -6,5 +6,55 @@
     </head>
     <body>
         <h1> Nepali Chicken Curry </h1>
+        <img src="../images/chicken-curry.jpg" alt="Chicken Curry image" height="500px" width="600px">
+        <p>
+            <h3>Description</h3>
+            Let us take a look at how a simple and delicious chicken curry is made in Nepal.
+            This dish is generally prepared in weekends and enjoyed with the whole family.
+        </p>
+        <p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li> Chicken - 500 grams.</li>
+                <li> Red Onion - 2.</li>
+                <li> Ginger-garlic paste - 2 tablepoons.</li>
+                <li> Tumeric - 1 teaspoon.</li>
+                <li> Green Chilly - 2.</li>
+                <li> Medium sized tomato - 4-5</li>
+                <li> Mustard oil - 4 tablepoons.</li>
+                <li> Chicken Masala - 1 and half tablespoons.</li>
+                <li> Salt - To taste.</li>
+            </ul>
+        </p>
+        <p>
+            <h3> Steps to follow :</h3>
+            <ol>
+                <li> Firstly roughly dice your onions, chillies and tomatoes and set them aside </li>
+                <li> Open your stove on medium-low heat and place a pan.</li>
+                <li> Pour 2 tablespoons of mustard oil and let it heat up a little.</li>
+                <li> After heating up the oil throw in the chicken.</li>
+                <li> Cook the chicken thoroughly until it has a little golden crust on the outside. Around 15-16 minutes.</li>
+                <li> Remove the chicken in a bowl and set it aside for now.</li>
+                <li> In the same pan add 1 tablespoon of mustard oil.</li>
+                <li> Now pour in your roughly choped onions first.</li>
+                <li> Add a pinch of salt to help wilt the onions faster.</li>
+                <li> Add the chillies to the onions and also add tumeric to give it some color.</li>
+                <li> Cook the onions till the oil spererates from it and remember to keep on stirring them to prevent them from burning.</li>
+                <li> Now add in the tomatoes and again a small pinch of salt to help it cook faster. Cook them weel otherwise your curry will taste like raw tomatoes</li>
+                <li> Cook the tomatoes till it completely wilts and chunks start disappearaing.</li>
+                <li> Now toss in the chicken that you set aside to the pan. Since we already cooked the chicken before we will only cook it for 6-7 more minutes.</li>
+                <li> Finally add the chicken masala and the chilly powder to the curry and throughly mix them. Cook it for additional 2-3 minutes.</li>
+                <li> The chicken curry is now ready. You can eat it with a serving of rice or with flat-breads</li>
+            </ol>
+        </p>
+        <p>
+            Like all the other recipes, I will be providing with a video link that can aid you better to cook the above recipe.
+            <a href="https://www.youtube.com/watch?v=5NSVp_kiSgk&ab_channel=YummyFoodWorld">How to cook a beautiful chicken curry the Nepali way.</a>
+        </p>
     </body>
+    <footer>
+        <a href="../index.html"> Go back to Homepage</a>
+        <br>
+        <a href="#">Scroll to Top</a>
+    </footer>
 </html>
