Created the final recipe page and added it to the index page along with modifing the momo recipe

--- a/recipes/momo.html
+++ b/recipes/momo.html
@@ -7,8 +7,10 @@
     <body>
         <h1> Chicken Mo:Mo Recipe </h1>
         <img src="../images/momo.jpg" alt="Momo image" height = 500px width = 600px>
-        <h3>Description</h3>
-        <p>Momo is a Nepalese style dumpling which are eaten as snacks.
+        
+        <p>
+            <h3>Description</h3>
+            Momo is a Nepalese style dumpling which are eaten as snacks.
             They are made with a tasty filling primarily consisting of ground chicken.
         </p>
         <p>
@@ -26,9 +28,8 @@
             </ul>
         </p>
         <p>
-            <h3> Steps to follow :</h3>
+            <h3> Steps to follow for preparing the filling :</h3>
             <ol>
-                <h4>To prepare the filling follow the following steps:</h4>
                 <li>Take a decent size mixing bowl.</li>
                 <li>Add 500 grams of ground chicken.</li>
                 <li>Finely chop the red onion and add to the bowl.</li>
@@ -40,6 +41,7 @@
             P.S : You can find momo masala in any Asian grocery store.
         </p>
         <p>
+            <h3>Preparing the dumpling:</h3>
             Now its time to fill the wrapper with the filling we just prepared. It will be better to 
             demonstrate how to fill the wrapper rather than writing a lengthy paragraph. Hence, i will be providing 
             a link to a beautiful video which will run you through step by step to prepare the wrapper.
