--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/momo.html"> Mo:Mo </a></li>
             <li><a href="./recipes/chicken-curry.html"> Chicken Curry </a></li> 
+            <li><a href="./recipes/lassi.html"> Lassi </a></li>
         </ul>
     </body>
 </html>
