--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <title> Recipe Website </title>
     </head>
     <body>
-        <h1> Famous Nepali Food Recipes </h1>
-        <ul>
-            <li><a href="./recipes/momo.html"> Mo:Mo </a></li>
-            <li><a href="./recipes/chicken-curry.html"> Chicken Curry </a></li> 
-            <li><a href="./recipes/lassi.html"> Lassi </a></li>
-        </ul>
+        <h1> My favourite Nepalese Food Recipes </h1>
+        <img src="./images/momo.jpg" alt="momo" height="300" width ="350">
+        <img src="./images/chicken-curry.jpg" alt="curry" height="300" width="350">
+        <img src="./images/Lassi.jpg" alt="lassi" height="300" width="350">
+
+        <p>
+            <h3>Description</h3>
+            This page showcases some of my favourite Nepalese food.
+        </p>
+        <p>
+            <h4> Here the recipes of the dishes shown above:</h4>
+            <ul>
+                <li><a href="./recipes/momo.html"> Mo:Mo </a></li>
+                <li><a href="./recipes/chicken-curry.html"> Chicken Curry </a></li> 
+                <li><a href="./recipes/lassi.html"> Lassi </a></li>
+            </ul>
+        </p>
     </body>
 </html>
