Made common styles sheet for all the pages hence modified the pages accordingly

--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -3,10 +3,11 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title> Nepali Lassi </title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1> Nepali Lassi </h1>
-        <img src="../images/Lassi.jpg" alt="Lassi Image" height="500px" width="600px">
+        <img src="../images/Lassi.jpg" alt="Lassi Image">
         <p>
             <h3>Description</h3>
             Lassi is a yogurt based drink that is simple to make. It helps you cool your body in a hot summer day.
