--- a/recipes/momo.html
+++ b/recipes/momo.html
@@ -3,10 +3,11 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title> Mo:Mo </title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1> Chicken Mo:Mo Recipe </h1>
-        <img src="../images/momo.jpg" alt="Momo image" height = 500px width = 600px>
+        <img src="../images/momo.jpg" alt="Momo image">
         
         <p>
             <h3>Description</h3>
