--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head lang="en">
     <meta charset="UTF-8">
     <title> Recipe Website </title>
+    <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
         <h1> My favourite Nepalese Food Recipes </h1>
-        <img src="./images/momo.jpg" alt="momo" height="300" width ="350">
-        <img src="./images/chicken-curry.jpg" alt="curry" height="300" width="350">
-        <img src="./images/Lassi.jpg" alt="lassi" height="300" width="350">
+        <img src="./images/momo.jpg" alt="momo">
+        <img src="./images/chicken-curry.jpg" alt="curry">
+        <img src="./images/Lassi.jpg" alt="lassi">
 
         <p>
             <h3>Description</h3>
