--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -3,10 +3,11 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title> Chicken Curry </title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1> Nepali Chicken Curry </h1>
-        <img src="../images/chicken-curry.jpg" alt="Chicken Curry image" height="500px" width="600px">
+        <img src="../images/chicken-curry.jpg" alt="Chicken Curry image">
         <p>
             <h3>Description</h3>
             Let us take a look at how a simple and delicious chicken curry is made in Nepal.
