h tag was inside the p tag so it was solved and further styling was done

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
-        <h1> My favourite Nepalese Food Recipes </h1>
+        <h1> My favourite Nepalese Food Recipes : </h1>
         <img src="./images/momo.jpg" alt="momo">
         <img src="./images/chicken-curry.jpg" alt="curry">
         <img src="./images/Lassi.jpg" alt="lassi">
 
+        <h3>Description :</h3>
         <p>
-            <h3>Description</h3>
             This page showcases some of my favourite Nepalese food.
         </p>
         <p>
