--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -8,12 +8,12 @@
     <body>
         <h1> Nepali Lassi </h1>
         <img src="../images/Lassi.jpg" alt="Lassi Image">
+        <h3>Description :</h3>
         <p>
-            <h3>Description</h3>
             Lassi is a yogurt based drink that is simple to make. It helps you cool your body in a hot summer day.
         </p>
+        <h3>Ingredients :</h3>
         <p>
-            <h3>Ingredients</h3>
             <ul>
                 <li> Plain yogurt - 2 cups</li>
                 <li> Milk - 1 cup </li>
@@ -22,8 +22,8 @@
                 <li> Ice - 2 cups</li>
             </ul>
         </p>
+        <h3>Steps to follow :</h3>
         <p>
-            <h3>Steps to follow:</h3>
             <ol>
                 <li>Take a blender, put all the ingredients and blend them till a smooth fixture is obtained.</li>
                 <li>Serve it immediately on a glass.</li>
