--- a/recipes/momo.html
+++ b/recipes/momo.html
@@ -9,13 +9,13 @@
         <h1> Chicken Mo:Mo Recipe </h1>
         <img src="../images/momo.jpg" alt="Momo image">
         
+        <h3>Description :</h3>
         <p>
-            <h3>Description</h3>
             Momo is a Nepalese style dumpling which are eaten as snacks.
             They are made with a tasty filling primarily consisting of ground chicken.
         </p>
+        <h3>Ingredients :</h3>
         <p>
-            <h3>Ingredients</h3>
             <ul>
                 <li>Pre made dumpling wrapper</li>  
                 <li>Ground chicken meat - 500 grams</li>
@@ -28,8 +28,8 @@
                 <li>Mustard oil - 2 teaspoons</li>
             </ul>
         </p>
+        <h3> Steps to follow for preparing the filling :</h3>
         <p>
-            <h3> Steps to follow for preparing the filling :</h3>
             <ol>
                 <li>Take a decent size mixing bowl.</li>
                 <li>Add 500 grams of ground chicken.</li>
@@ -38,11 +38,12 @@
                 <li>Add tumeric, chilly powder, momo masala, salt and mustard oil as listed above in the ingredients section.</li>
                 <li>Add one teaspoon of water, this will keep our meat tender while cooking.</li>
                 <li>Now mix all the ingredients together. </li>
+                P.S : You can find momo masala in any Asian grocery store.
             </ol>
-            P.S : You can find momo masala in any Asian grocery store.
+            
         </p>
+        <h3>Preparing the dumpling :</h3>
         <p>
-            <h3>Preparing the dumpling:</h3>
             Now its time to fill the wrapper with the filling we just prepared. It will be better to 
             demonstrate how to fill the wrapper rather than writing a lengthy paragraph. Hence, i will be providing 
             a link to a beautiful video which will run you through step by step to prepare the wrapper.
