--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -8,13 +8,13 @@
     <body>
         <h1> Nepali Chicken Curry </h1>
         <img src="../images/chicken-curry.jpg" alt="Chicken Curry image">
+        <h3>Description :</h3>
         <p>
-            <h3>Description</h3>
             Let us take a look at how a simple and delicious chicken curry is made in Nepal.
             This dish is generally prepared in weekends and enjoyed with the whole family.
         </p>
+        <h3>Ingredients :</h3>
         <p>
-            <h3>Ingredients</h3>
             <ul>
                 <li> Chicken - 500 grams.</li>
                 <li> Red Onion - 2.</li>
@@ -27,8 +27,8 @@
                 <li> Salt - To taste.</li>
             </ul>
         </p>
+        <h3> Steps to follow :</h3>
         <p>
-            <h3> Steps to follow :</h3>
             <ol>
                 <li> Firstly roughly dice your onions, chillies and tomatoes and set them aside </li>
                 <li> Open your stove on medium-low heat and place a pan.</li>
