Made individual pages images centered

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1> Nepali Chicken Curry </h1>
-        <img src="../images/chicken-curry.jpg" alt="Chicken Curry image">
+        <img id="page-curry" src="../images/chicken-curry.jpg" alt="Chicken Curry image">
         <h3>Description :</h3>
         <p>
             Let us take a look at how a simple and delicious chicken curry is made in Nepal.
