--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1> Nepali Lassi </h1>
-        <img src="../images/Lassi.jpg" alt="Lassi Image">
+        <img id="page-lassi" src="../images/Lassi.jpg" alt="Lassi Image">
         <h3>Description :</h3>
         <p>
             Lassi is a yogurt based drink that is simple to make. It helps you cool your body in a hot summer day.
