--- a/recipes/momo.html
+++ b/recipes/momo.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1> Chicken Mo:Mo Recipe </h1>
-        <img src="../images/momo.jpg" alt="Momo image">
+        <img id="page-momo" src="../images/momo.jpg" alt="Momo image">
         
         <h3>Description :</h3>
         <p>
